terraform/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1

  selector:
    matchLabels:
      app: jenkins

  template:
    metadata:
      labels:
        app: jenkins

  spec:
    securityContext:
      fsGroup: 1000

    containers:
      - name: jenkins
        image: jenkins/jenkins:lts

        ports:
          - containerPort: 8080

        volumeMounts:
          - name: jenkins-storage
            mountPath: /var/jenkins_home

    volumes:
      - name: jenkins-storage
        persistentVolumeClaim:
          claimName: jenkins-pvc
