terraform/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-test
  namespace: jenkins
spec:
  containers:
  - name: test
    image: busybox
    command: ["/bin/sh", "-c", "sleep 3600"]

    volumeMounts:
    - name: storage
      mountPath: /data

  volumes:
  - name: storage
    persistentVolumeClaim:
      claimName: jenkins-pvc
